--- a/cat-api-frontend/src/App.css
+++ b/cat-api-frontend/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+body{
+  background-color: cornsilk;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.header{
+  display : flex;
+  flex-direction: row;
+  /* justify-content:space-around; */
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top : 3rem;
+}
+.header .header-left{
+  margin : 50px 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.header .header-right button{
+  padding: 15px 30px;
+    background-color: rgb(32, 143, 32);
+    color : white;
+    border: none;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+    font-weight: bold;
+    position: relative;
+    text-transform: uppercase;
+    transition: all 200ms ease-in-out;
+    cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.header .header-right button::before,
+.header .header-right button::after {
+  content: "";
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  bottom: -2px;
+  background-color:  rgb(10, 10, 10);
+  transition: width 0.3s ease-in-out;
 }
+
+.header .header-right button::before {
+  left: 0;
+}
+
+.header .header-right button::after {
+  right: 0;
+}
+
+.header .header-right button:hover::before,
+.header .header-right button:hover::after {
+  width: 50%;
+}
+
