--- a/cat-api-frontend/src/styles/header-img.css
+++ b/cat-api-frontend/src/styles/header-img.css
@@ -1,14 +1,16 @@
 .image-cat img{
   max-width : 500px;
+  min-width : 500px;
+  object-fit: cover;
   height : 400px;
   border-radius: 10px;
   box-shadow: rgba(79, 79, 79, 0.18) 3px 3px 10px;
-  transition-duration: 300ms;
+  transition-duration: 500ms;
   transition-property: transform, box-shadow;
   transition-timing-function: ease-out;
   transform: rotate3d(0);
 }
-.image-cat img{
+.image-cat img:hover{
   transition-duration: 500ms;
   box-shadow: 0 5px 20px 5px #00000044;
 }
