--- a/cat-api-frontend/src/styles/footer.css
+++ b/cat-api-frontend/src/styles/footer.css
@@ -1,8 +1,86 @@
-.footer{
+.container {
   display: flex;
-  flex-direction: column;
-  text-align: left;
-  margin-left : 50px;
-  font-size : 20px;
-  /* gap : 20px; */
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: flex-start;
+  width: 100%;
+  margin-top: 50px;
 }
+
+.informations {
+  max-width: 800px;
+  flex-grow: 1;
+  font-size: 20px;
+  background-color: #eeeded;
+  border-radius: 10px;
+  padding : 20px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 15px 0px;
+  transition : all 200ms ease-in-out;
+}
+.informations:hover{
+  box-shadow:rgba(0, 0, 0, 0.5) 0px 5px 15px 0px ;
+}
+
+.competences {
+  font-size: 20px;
+  background-color: #eeeded;
+  border-radius: 10px;
+  padding : 20px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 15px 0px;
+  transition : all 200ms ease-in-out;
+}
+.competences:hover{
+  box-shadow:rgba(0, 0, 0, 0.5) 0px 5px 15px 0px ;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+td {
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+tr:first-child td {
+  border-top: none;
+}
+
+tr:last-child td {
+  border-bottom: none;
+}
+
+tr td:first-child {
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: #ddd;
+  cursor: pointer;
+}
+
+tr:hover td {
+  color: #000;
+}
+
+.competences table {
+  border: none;
+  margin: 0;
+}
+
+.competences table tr:nth-child(even) {
+  background-color: transparent;
+}
+
+.competences table tr td:first-child {
+  border-right: 1px solid #ccc;
+}
+
+.competences table tr td:nth-child(2) {
+  position: relative;
+}
+
