--- a/cat-api-frontend/src/styles/header-content.css
+++ b/cat-api-frontend/src/styles/header-content.css
@@ -3,6 +3,10 @@
   border-radius: 10px;
   padding : 15px 15px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 5px 8px 0px;
+  transition : all 200ms ease-in-out;
+}
+.header-content:hover{
+  box-shadow:rgba(0, 0, 0, 0.4) 0px 5px 15px 0px ;
 }
 .header-content .content{
   max-width : 800px;
